samples/_failures_safe/1761226791_a26254_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_977f9cc0.c: In function ‘main’:
./samples/SAFE/__tmp_977f9cc0.c:163:9: error: ‘total’ undeclared (first use in this function)
  163 |         total
      |         ^~~~~
./samples/SAFE/__tmp_977f9cc0.c:163:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_977f9cc0.c:163:14: error: expected ‘;’ at end of input
  163 |         total
      |              ^
      |              ;
./samples/SAFE/__tmp_977f9cc0.c:163:9: error: expected declaration or statement at end of input
  163 |         total
      |         ^~~~~
./samples/SAFE/__tmp_977f9cc0.c:163:9: error: expected declaration or statement at end of input
